[gd_scene load_steps=3 format=3 uid="uid://cdoln5xrjb5w1"]

[ext_resource type="Script" path="res://scenes/task.gd" id="1_lgstg"]
[ext_resource type="LabelSettings" uid="uid://cgh4p2ayde11m" path="res://resources/theme/labelsettings/default_normal_label_settings.tres" id="3_p8x5j"]

[node name="Task" type="MarginContainer"]
z_index = 5
clip_contents = true
custom_minimum_size = Vector2(300, 96)
mouse_default_cursor_shape = 2
script = ExtResource("1_lgstg")

[node name="TaskPanel" type="Panel" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"TaskPanel"

[node name="TaskPanelColor" type="Panel" parent="TaskPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"TaskPanelHover"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TaskLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Task Title"
label_settings = ExtResource("3_p8x5j")
autowrap_mode = 2

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme_type_variation = &"TaskEditButton"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
theme_type_variation = &"TaskDeleteButton"

[node name="Expand_Wait_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
